--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,6 +1,10 @@
 $primary: #333333
 $secondary: #eeeeee
 
+$primary-shadow: #777777
+
+$link-color: #dddddd
+
 $footer-text-color: #BDBDBD
 $text-color: #333333
 $dark: #0A223D
