--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -3,5 +3,28 @@
    &__wrapper
       display: flex
       align-items: center
+      justify-content: space-between
+      padding: 2rem 0
+      border-bottom: .2rem solid $link-color
    &__title
-      font-size: 3rem
+      font-size: 3.5rem
+      font-weight: 700
+      text-shadow: .2rem .2rem 3px $primary-shadow
+   &__contacts
+      display: flex
+      align-items: center
+      justify-content: space-between
+      width: 12rem
+   &__link
+      width: 3rem
+      height: 3rem
+      border-color: transparent
+      border-radius: 50%
+      background-color: $link-color
+      display: flex
+      align-items: center
+      justify-content: center
+   &__icon
+      width: 1rem
+      height: 1rem
+      fill: $primary
