--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -7,7 +7,7 @@
       padding: 2rem 0
       border-bottom: .2rem solid $link-color
    &__title
-      font-size: 3.5rem
+      font-size: 3.2rem
       font-weight: 700
       text-shadow: .2rem .2rem 3px $primary-shadow
    &__contacts
@@ -24,7 +24,11 @@
       display: flex
       align-items: center
       justify-content: center
+      box-shadow: .2rem .2rem 3px $primary-shadow
+      &:hover
+         box-shadow: .15rem .15rem 3px $primary-shadow
+
    &__icon
-      width: 1rem
-      height: 1rem
+      width: 1.2rem
+      height: 1.2rem
       fill: $primary
