--- a/css/style.css
+++ b/css/style.css
@@ -415,7 +415,7 @@ img {
 }
 
 .header__title {
-  font-size: 3.5rem;
+  font-size: 3.2rem;
   font-weight: 700;
   text-shadow: 0.2rem 0.2rem 3px #777777;
 }
@@ -448,11 +448,18 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-shadow: 0.2rem 0.2rem 3px #777777;
+          box-shadow: 0.2rem 0.2rem 3px #777777;
+}
+
+.header__link:hover {
+  -webkit-box-shadow: 0.15rem 0.15rem 3px #777777;
+          box-shadow: 0.15rem 0.15rem 3px #777777;
 }
 
 .header__icon {
-  width: 1rem;
-  height: 1rem;
+  width: 1.2rem;
+  height: 1.2rem;
   fill: #333333;
 }
 /*# sourceMappingURL=style.css.map */
