--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,9 +1,11 @@
-$primary: #333333
-$secondary: #eeeeee
+$primary: #011627
+$secondary: #f6f7f9
+//$secondary: hsl(208, 27%, 90%);
 
-$primary-shadow: #777777
+$primary-shadow: #aad8fd
+$secondary-shadow: #023b69
 
-$link-color: #dddddd
+$link-color: #e3eef7
 
 $footer-text-color: #BDBDBD
 $text-color: #333333
