--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -4,8 +4,8 @@
       display: flex
       align-items: center
       justify-content: space-between
-      padding: 2rem 0
-      border-bottom: .2rem solid $link-color
+      padding: 1.5rem 0
+      box-shadow: 0 .2rem  3px -3px $primary-shadow
    &__title
       font-size: 3.2rem
       font-weight: 700
@@ -24,10 +24,9 @@
       display: flex
       align-items: center
       justify-content: center
-      box-shadow: .2rem .2rem 3px $primary-shadow
+      box-shadow: .2rem .2rem 3px $secondary-shadow
       &:hover
-         box-shadow: .15rem .15rem 3px $primary-shadow
-
+         box-shadow: .15rem .15rem 3px $secondary-shadow
    &__icon
       width: 1.2rem
       height: 1.2rem
