сверстан блок информации

--- a/css/style.css
+++ b/css/style.css
@@ -418,7 +418,7 @@ img {
 .header__title {
   font-size: 3.2rem;
   font-weight: 700;
-  text-shadow: 0.2rem 0.2rem 3px #aad8fd;
+  text-shadow: 0.1rem 0.2rem 3px #aad8fd;
 }
 
 .header__contacts {
@@ -449,13 +449,13 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-shadow: 0.2rem 0.2rem 3px #023b69;
-          box-shadow: 0.2rem 0.2rem 3px #023b69;
+  -webkit-box-shadow: 0.1rem 0.2rem 3px #023b69;
+          box-shadow: 0.1rem 0.2rem 3px #023b69;
 }
 
 .header__link:hover {
-  -webkit-box-shadow: 0.15rem 0.15rem 3px #023b69;
-          box-shadow: 0.15rem 0.15rem 3px #023b69;
+  -webkit-box-shadow: 0.07rem 0.15rem 3px #023b69;
+          box-shadow: 0.07rem 0.15rem 3px #023b69;
 }
 
 .header__icon {
@@ -480,7 +480,7 @@ img {
   border-radius: 50%;
   background-color: #f6f7f9;
   position: relative;
-  margin: 2rem;
+  margin: 1.5rem;
 }
 
 .hero__avatar::before {
@@ -495,6 +495,8 @@ img {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   z-index: -2;
+  -webkit-box-shadow: 0.1rem 0.2rem 3px #023b69;
+          box-shadow: 0.1rem 0.2rem 3px #023b69;
 }
 
 .hero__avatar::after {
@@ -517,5 +519,65 @@ img {
   -o-object-fit: cover;
      object-fit: cover;
   fill: #011627;
+}
+
+.hero__info {
+  -ms-flex-preferred-size: 65%;
+      flex-basis: 65%;
+}
+
+.hero__title {
+  font-size: 2.8rem;
+  font-weight: 500;
+  text-shadow: 0.1rem 0.2rem 3px #aad8fd;
+  margin: 1rem 0;
+}
+
+.hero__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.hero__text {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: .5rem 0;
+}
+
+.hero__text::first-letter {
+  margin-left: 1rem;
+}
+
+.hard {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hard__item {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.hard__item:not(:last-child) {
+  margin-right: .3rem;
+}
+
+.hard__icon {
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=style.css.map */
