--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -4,12 +4,13 @@
     justify-content: space-between
     padding: 1.5rem 0
   &__avatar
+    
     width: 17rem
     height: 17rem
     border-radius: 50%
     background-color: $secondary
     position: relative
-    margin: 2rem
+    margin: 1.5rem
     &::before
       position: absolute
       content: ' '
@@ -21,6 +22,7 @@
       left: 50%
       transform: translate(-50%,-50%)
       z-index: -2
+      box-shadow: .1rem .2rem 3px $secondary-shadow
     &::after
       position: absolute
       content: ' '
@@ -38,4 +40,35 @@
     height: 100%
     object-fit: cover
     fill: $primary
+  &__info
+    flex-basis: 65%
+  &__title
+    font-size: 2.8rem
+    font-weight: 500
+    text-shadow: .1rem .2rem 3px $primary-shadow
+    margin:  1rem 0
+  &__header
+    display: flex
+    align-items: center
+    justify-content: space-between
+  &__text
+    font-size: 1.2rem
+    font-weight: 400
+    margin: .5rem 0
+    &::first-letter
+      margin-left: 1rem
 
+.hard
+  padding: 0
+  margin: 0
+  list-style-type: none
+  display: flex
+  align-items: center
+  &__item
+    width: 1.5rem
+    height: 1.5rem
+    &:not(:last-child)
+      margin-right: .3rem
+  &__icon
+    width: 100%
+    height: 100%
