--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -10,7 +10,7 @@ body
   font-style: normal
   font-size: 62.5%
   font-weight: 400
-  @include scrollbars(1rem, 0.4rem, $footer-text-color, $secondary)
+  @include scrollbars(0.8rem, 0.3rem, $link-color, $secondary)
 
 a
   text-decoration: none
