--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,4 +8,7 @@
 @import 'settings'
 //Styles for block: Header
 @import 'blocks/header'
+//Styles for block: Hero
 @import 'blocks/hero'
+//Styles for block: Profile
+@import 'blocks/profile'
