--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,13 +1,10 @@
 $primary: #011627
 $secondary: #f6f7f9
-//$secondary: hsl(208, 27%, 90%);
 
 $primary-shadow: #aad8fd
 $secondary-shadow: #023b69
 
 $link-color: #e3eef7
 
-$footer-text-color: #BDBDBD
-$text-color: #333333
-$dark: #0A223D
-$light: #FFFFFF
+$project-color: #e7e8ef
+
