--- a/sass/blocks/_profile.sass
+++ b/sass/blocks/_profile.sass
@@ -18,14 +18,13 @@
     box-shadow: .1rem .2rem  3px  $secondary-shadow
     &:not(:last-child)
       margin-bottom: 2rem
-        
-      
   &__preview
     width: 100%
     height: 100%
     display: block
     background-color: #fff
     border-radius: 1rem
+    overflow: hidden
   &__info
     display: flex
     flex-direction: column
@@ -34,7 +33,7 @@
     flex-basis: 10%
     font-size: 1.8rem
     font-weight: 500
-    margin: 0
+    margin: .5rem 0
   &__description
     flex-basis: 70%
     font-size: 1.2rem
