--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1.5rem 0;
+  padding: 2.5rem 0;
   -webkit-box-shadow: 0 0.2rem 3px -3px #aad8fd;
           box-shadow: 0 0.2rem 3px -3px #aad8fd;
 }
@@ -468,10 +468,13 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 1.5rem 0;
+  padding: 6rem 0;
 }
 
 .hero__avatar {
@@ -543,6 +546,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin-bottom: 2rem;
 }
 
 .hero__text {
@@ -552,7 +556,7 @@ img {
 }
 
 .hero__text::first-letter {
-  margin-left: 1rem;
+  margin-left: 0rem;
 }
 
 .hard {
@@ -568,12 +572,12 @@ img {
 }
 
 .hard__item {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.7rem;
+  height: 1.7rem;
 }
 
 .hard__item:not(:last-child) {
-  margin-right: .3rem;
+  margin-right: .5rem;
 }
 
 .hard__icon {
@@ -589,7 +593,7 @@ img {
   font-size: 2.8rem;
   font-weight: 500;
   text-shadow: 0.1rem 0.2rem 3px #aad8fd;
-  margin: 1rem 0 2rem;
+  margin: 2rem 0 3rem;
 }
 
 .project__item {
@@ -608,7 +612,7 @@ img {
 }
 
 .project__item:not(:last-child) {
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .project__preview {
