--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -1,8 +1,10 @@
 .hero
   &__wrapper
     display: flex
+    align-items: center
     justify-content: space-between
-    padding: 1.5rem 0
+
+    padding: 6rem 0
   &__avatar
     width: 17rem
     height: 17rem
@@ -44,17 +46,18 @@
     font-size: 2.8rem
     font-weight: 500
     text-shadow: .1rem .2rem 3px $primary-shadow
-    margin:  1rem 0
+    margin: 1rem 0
   &__header
     display: flex
     align-items: center
     justify-content: space-between
+    margin-bottom: 2rem
   &__text
     font-size: 1.2rem
     font-weight: 400
     margin: .5rem 0
     &::first-letter
-      margin-left: 1rem
+      margin-left: 0rem
 
 .hard
   padding: 0
@@ -63,10 +66,10 @@
   display: flex
   align-items: center
   &__item
-    width: 1.5rem
-    height: 1.5rem
+    width: 1.7rem
+    height: 1.7rem
     &:not(:last-child)
-      margin-right: .3rem
+      margin-right: .5rem
   &__icon
     width: 100%
     height: 100%
