--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 2.5rem 0;
+  padding: 2rem 0;
   -webkit-box-shadow: 0 0.2rem 3px -3px #aad8fd;
           box-shadow: 0 0.2rem 3px -3px #aad8fd;
 }
@@ -474,7 +474,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 6rem 0;
+  padding: 3rem 0;
 }
 
 .hero__avatar {
@@ -533,7 +533,7 @@ img {
   font-size: 2.8rem;
   font-weight: 500;
   text-shadow: 0.1rem 0.2rem 3px #aad8fd;
-  margin: 1rem 0;
+  margin: 0 0 1rem;
 }
 
 .hero__header {
@@ -586,7 +586,7 @@ img {
 }
 
 .profile {
-  padding: 4rem 0;
+  padding: 3rem 0;
 }
 
 .profile__title {
