--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -4,7 +4,7 @@
     align-items: center
     justify-content: space-between
 
-    padding: 6rem 0
+    padding: 3rem 0
   &__avatar
     width: 17rem
     height: 17rem
@@ -46,7 +46,7 @@
     font-size: 2.8rem
     font-weight: 500
     text-shadow: .1rem .2rem 3px $primary-shadow
-    margin: 1rem 0
+    margin: 0 0 1rem
   &__header
     display: flex
     align-items: center
