--- a/css/style.css
+++ b/css/style.css
@@ -603,7 +603,7 @@ img {
       grid-template-columns: 2fr 5fr;
   grid-column-gap: 1.5rem;
   width: 100%;
-  height: 15rem;
+  min-height: 15rem;
   border-radius: 1rem;
   padding: 1.5rem;
   background-color: #eaeaf1;
@@ -654,6 +654,7 @@ img {
 }
 
 .project__footer {
+  margin-top: 0.5rem;
   -ms-flex-preferred-size: 20%;
       flex-basis: 20%;
   font-size: 1rem;
