--- a/sass/blocks/_profile.sass
+++ b/sass/blocks/_profile.sass
@@ -11,7 +11,7 @@
     grid-template-columns: 2fr 5fr
     grid-column-gap: 1.5rem
     width: 100%
-    height: 15rem
+    min-height: 15rem
     border-radius: 1rem
     padding: 1.5rem
     background-color: $project-color
@@ -40,6 +40,7 @@
     font-weight: 400
     margin: 0
   &__footer
+    margin-top: 0.5rem
     flex-basis: 20%
     font-size: 1rem
     font-weight: 400
