опубликованы болшенство проектов

--- a/sass/blocks/_profile.sass
+++ b/sass/blocks/_profile.sass
@@ -1,10 +1,10 @@
 .profile
   padding: 3rem 0
   &__title
-    font-size: 2.8rem
+    font-size: 4.5rem
     font-weight: 500
     text-shadow: .1rem .2rem 3px $primary-shadow
-    margin: 2rem 0 3rem
+    margin: 3.2rem 0 4.8rem
 .project
   &__item
     display: grid
@@ -17,10 +17,11 @@
     background-color: $project-color
     box-shadow: .1rem .2rem 3px $secondary-shadow
     &:not(:last-child)
-      margin-bottom: 3rem
+      margin-bottom: 4.8rem
   &__preview
     width: 100%
-    height: 100%
+    min-height: 20rem
+    max-height: 24rem
     display: block
     background-color: #fff
     border-radius: 1rem
@@ -31,16 +32,16 @@
     justify-content: space-between
   &__name
     flex-basis: 10%
-    font-size: 1.8rem
+    font-size: 2.9rem
     font-weight: 500
-    margin: .5rem 0
+    margin: 1rem 0
   &__description
     flex-basis: 70%
-    font-size: 1.2rem
+    font-size: 1.9rem
     font-weight: 400
     margin: 0
   &__footer
-    margin-top: 0.5rem
+    margin-top: 1rem
     flex-basis: 20%
-    font-size: 1rem
+    font-size: 1.2rem
     font-weight: 400
