--- a/css/style.css
+++ b/css/style.css
@@ -351,23 +351,26 @@ template {
           box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   color: #011627;
   background-color: #f6f7f9;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
-  font-size: 62.5%;
   font-weight: 400;
 }
 
 body::-webkit-scrollbar {
-  width: 0.8rem;
-  height: 0.8rem;
+  width: 1rem;
+  height: 1rem;
 }
 
 body::-webkit-scrollbar-thumb {
   background: #e3eef7;
-  border-radius: 0.3rem;
+  border-radius: 0.4rem;
 }
 
 body::-webkit-scrollbar-track {
@@ -398,6 +401,10 @@ a, input {
 
 img {
   max-width: 100%;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .header__wrapper {
@@ -410,13 +417,13 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 2rem 0;
+  padding: 3rem 0;
   -webkit-box-shadow: 0 0.2rem 3px -3px #aad8fd;
           box-shadow: 0 0.2rem 3px -3px #aad8fd;
 }
 
 .header__title {
-  font-size: 3.2rem;
+  font-size: 5.6rem;
   font-weight: 700;
   text-shadow: 0.1rem 0.2rem 3px #aad8fd;
 }
@@ -431,12 +438,12 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 12rem;
+  width: 19.2rem;
 }
 
 .header__link {
-  width: 3rem;
-  height: 3rem;
+  width: 4.8rem;
+  height: 4.8rem;
   border-color: transparent;
   border-radius: 50%;
   background-color: #e3eef7;
@@ -459,8 +466,8 @@ img {
 }
 
 .header__icon {
-  width: 1.2rem;
-  height: 1.2rem;
+  width: 1.92rem;
+  height: 1.92rem;
   fill: #011627;
 }
 
@@ -474,12 +481,12 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 3rem 0;
+  padding: 7rem 0;
 }
 
 .hero__avatar {
-  width: 17rem;
-  height: 17rem;
+  width: 27.2rem;
+  height: 27.2rem;
   border-radius: 50%;
   background-color: #f6f7f9;
   position: relative;
@@ -489,8 +496,8 @@ img {
 .hero__avatar::before {
   position: absolute;
   content: ' ';
-  width: 20rem;
-  height: 20rem;
+  width: 32rem;
+  height: 32rem;
   border-radius: 50%;
   background-color: #e3eef7;
   top: 50%;
@@ -505,8 +512,8 @@ img {
 .hero__avatar::after {
   position: absolute;
   content: ' ';
-  width: 18rem;
-  height: 18rem;
+  width: 28.8rem;
+  height: 28.8rem;
   border-radius: 50%;
   background-color: #f6f7f9;
   top: 50%;
@@ -530,10 +537,10 @@ img {
 }
 
 .hero__title {
-  font-size: 2.8rem;
+  font-size: 4.5rem;
   font-weight: 500;
   text-shadow: 0.1rem 0.2rem 3px #aad8fd;
-  margin: 0 0 1rem;
+  margin: 0 0 1.6rem;
 }
 
 .hero__header {
@@ -546,17 +553,17 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-bottom: 2rem;
+  margin-bottom: 3.2rem;
 }
 
 .hero__text {
-  font-size: 1.2rem;
+  font-size: 1.9rem;
   font-weight: 400;
   margin: .5rem 0;
 }
 
 .hero__text::first-letter {
-  margin-left: 0.5rem;
+  margin-left: 1.5rem;
 }
 
 .hard {
@@ -572,12 +579,12 @@ img {
 }
 
 .hard__item {
-  width: 1.7rem;
-  height: 1.7rem;
+  width: 2.7rem;
+  height: 2.7rem;
 }
 
 .hard__item:not(:last-child) {
-  margin-right: .5rem;
+  margin-right: .7rem;
 }
 
 .hard__icon {
@@ -590,10 +597,10 @@ img {
 }
 
 .profile__title {
-  font-size: 2.8rem;
+  font-size: 4.5rem;
   font-weight: 500;
   text-shadow: 0.1rem 0.2rem 3px #aad8fd;
-  margin: 2rem 0 3rem;
+  margin: 3.2rem 0 4.8rem;
 }
 
 .project__item {
@@ -612,12 +619,13 @@ img {
 }
 
 .project__item:not(:last-child) {
-  margin-bottom: 3rem;
+  margin-bottom: 4.8rem;
 }
 
 .project__preview {
   width: 100%;
-  height: 100%;
+  min-height: 20rem;
+  max-height: 24rem;
   display: block;
   background-color: #fff;
   border-radius: 1rem;
@@ -640,24 +648,24 @@ img {
 .project__name {
   -ms-flex-preferred-size: 10%;
       flex-basis: 10%;
-  font-size: 1.8rem;
+  font-size: 2.9rem;
   font-weight: 500;
-  margin: .5rem 0;
+  margin: 1rem 0;
 }
 
 .project__description {
   -ms-flex-preferred-size: 70%;
       flex-basis: 70%;
-  font-size: 1.2rem;
+  font-size: 1.9rem;
   font-weight: 400;
   margin: 0;
 }
 
 .project__footer {
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   -ms-flex-preferred-size: 20%;
       flex-basis: 20%;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 400;
 }
 /*# sourceMappingURL=style.css.map */
