--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -3,14 +3,15 @@
   &::after, &::before
     box-sizing: border-box
 
+html
+  font-size: 62.5%
 body
   color: $primary
   background-color: $secondary
   font-family: 'Roboto', sans-serif
   font-style: normal
-  font-size: 62.5%
   font-weight: 400
-  @include scrollbars(0.8rem, 0.3rem, $link-color, $secondary)
+  @include scrollbars(1rem, 0.4rem, $link-color, $secondary)
 
 a
   text-decoration: none
@@ -24,3 +25,6 @@ a, input
 
 img
   max-width: 100%
+  width: 100%
+  height: 100%
+  object-fit: cover
