--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -28,3 +28,7 @@ img
   width: 100%
   height: 100%
   object-fit: cover
+.title
+  font-size: 4.5rem
+  font-weight: 500
+  text-shadow: .1rem .2rem 3px $primary-shadow
