--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,3 +12,5 @@
 @import 'blocks/hero'
 //Styles for block: Profile
 @import 'blocks/profile'
+//Styles for block: Certificates
+@import 'blocks/certificates'
