--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -32,3 +32,16 @@ img
   font-size: 4.5rem
   font-weight: 500
   text-shadow: .1rem .2rem 3px $primary-shadow
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.45);
+  z-index: 10;
+}
