--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,3 +14,5 @@
 @import 'blocks/profile'
 //Styles for block: Certificates
 @import 'blocks/certificates'
+//Styles for block: Footer
+@import 'blocks/footer'
