--- a/sass/blocks/_certificates.sass
+++ b/sass/blocks/_certificates.sass
@@ -4,13 +4,15 @@
     margin: 3.2rem 0 4.8rem
   &__lists
     padding: 3rem 3rem
+    border-radius: 1rem
+    box-shadow: -.1rem -.1rem 3px $primary-shadow, .1rem .1rem 3px $primary-shadow
     position: relative
   &__swiper
     height: 30rem
   &__docs
     height: 100%
     position: relative
-    border-radius: .5rem
+    border-radius: .7rem
     display: block
     overflow: hidden
     & > img
