--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -1,12 +1,13 @@
 .footer
    &__wrapper
+      margin-top: 3rem
       display: flex
       align-items: center
       justify-content: space-between
       padding: 1rem 0
       box-shadow: 0 -.3rem 3px -3px $primary-shadow
    &__title
-      font-size: 1.6rem
+      font-size: 1.8rem
       font-weight: 700
       text-shadow: .1rem .2rem 3px $primary-shadow
    &__contacts
@@ -26,6 +27,6 @@
       &:hover
          box-shadow: .07rem .15rem 3px $secondary-shadow
    &__icon
-      width: 1.92rem
-      height: 1.92rem
+      width: 2rem
+      height: 2rem
       fill: $primary
