добавил воздуха в карточках проектов

--- a/sass/blocks/_profile.sass
+++ b/sass/blocks/_profile.sass
@@ -10,7 +10,7 @@
     width: 100%
     min-height: 15rem
     border-radius: 1rem
-    padding: 1.5rem
+    padding: 2rem
     background-color: $project-color
     box-shadow: .1rem .2rem 3px $secondary-shadow
     &:not(:last-child)
@@ -27,6 +27,7 @@
     display: flex
     flex-direction: column
     justify-content: space-between
+    padding-left: 3rem
   &__name
     flex-basis: 10%
     font-size: 2.9rem
