--- a/sass/blocks/_profile.sass
+++ b/sass/blocks/_profile.sass
@@ -20,7 +20,7 @@
     min-height: 20rem
     max-height: 24rem
     display: block
-    background-color: #fff
+    background-color: $secondary
     border-radius: 1rem
     overflow: hidden
   &__info
