--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -4,6 +4,7 @@
       display: flex
       align-items: center
       justify-content: space-between
+      flex-wrap: wrap
       padding: 3rem 0
       box-shadow: 0 .2rem 3px -3px $primary-shadow
    &__title
