--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -50,6 +50,7 @@
     display: flex
     align-items: center
     justify-content: space-between
+    flex-wrap: wrap
     margin-bottom: 3.2rem
   &__text
     font-size: 1.9rem
