--- a/sass/blocks/_certificates.sass
+++ b/sass/blocks/_certificates.sass
@@ -56,9 +56,9 @@
     &:hover
       box-shadow: .07rem .15rem 3px $secondary-shadow
     &--prev
-      left: -28px
+      left: -2.8rem
     &--next
-      right: -28px
+      right: -2.8rem
     &--disabled
       opacity: 0
       fill: rgba(#e9e9e9,1)
